--- a/TipsCalc/Base.lproj/Main.storyboard
+++ b/TipsCalc/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                 </segments>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <action selector="onEditingChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="nii-gp-dyB"/>
+                                    <action selector="onTipChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Gx7-9u-FWm"/>
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gGu-qJ-XuA">
